--- a/.github/workflows/ssh-server.yml
+++ b/.github/workflows/ssh-server.yml
@@ -1,22 +1,25 @@
-name: SSH Server
+name: Debugging with SSH
 on: push
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-     - uses: actions/checkout@v2
-
-     - name: Failed
-       run: ./dummy.sh
-
-     - name: Start SSH Server
+     - uses: actions/checkout@v1
+ 
+     - name: Try Build
+       run: ./not-exist-file.sh it bloke build
+ 
+     - name: Start SSH via Ngrok
        if: ${{ failure() }}
+       run: curl -sL https://gist.githubusercontent.com/retyui/7115bb6acf151351a143ec8f96a7c561/raw/7099b9db76729dc5761da72aa8525f632d8875c9/debug-github-actions.sh | bash
        env:
-         NGROK_TOKEN: ${{ secrets.NGROK_TOKEN }}
-         SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
-       run: |
-          chmod +x ./ssh-server.sh &&  ./ssh-server.sh
-
-     - name: Sleep
+        # After sign up on the https://ngrok.com/
+        # You can find this token here: https://dashboard.ngrok.com/get-started/setup
+        NGROK_TOKEN: ${{ secrets.NGROK_TOKEN }}
+ 
+        # This password you will use when authorizing via SSH 
+        USER_PASS: ${{ secrets.SSH_PASSWORD }}
+ 
+     - name: Don't kill instace
        if: ${{ failure() }}
-       run: sleep 6h
+       run: sleep 1h # Prevent to killing instance after failure
